--- a/k8s/chart/templates/rbac.yaml
+++ b/k8s/chart/templates/rbac.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
   {{- include "sdp-operator.labels" . | nindent 4 }}
 rules:
-  - apiGroups: ["{{ .Values.sdp.operator.version }}.appgate.com"]
+  - apiGroups: ["beta.appgate.com"]
     resources:
       - policies
       - entitlements
