--- a/tests/resources/v12/identity_providers.yaml
+++ b/tests/resources/v12/identity_providers.yaml
@@ -4,6 +4,10 @@ metadata:
   name: etewtew
 spec:
   adminProvider: true
+  adminDistinguishedName: "foo"
+  hostnames:
+    - "foo.com"
+  port: 6443
   claimMappings:
   - attributeName: memberOf
     claimName: groups
