--- a/tests/resources/v12/conditions.yaml
+++ b/tests/resources/v12/conditions.yaml
@@ -18,54 +18,54 @@ spec:
   - api-created
   - automated
   - k8s
-#---
-#apiVersion: beta.appgate.com/v1
-#kind: Condition
-#metadata:
-#  name: Always
-#spec:
-#  expression: return true;
-#  id: ee7b7e6f-e904-4b4f-a5ec-b3bef040643e
-#  name: Always
-#  notes: Condition for built-in usage.
-#  remedyMethods: []
-#  repeatSchedules: []
-#  tags:
-#  - builtin
-#---
-#apiVersion: beta.appgate.com/v1
-#kind: Condition
-#metadata:
-#  name: condition-3
-#spec:
-#  expression: ' var result = false; /*password*/ if (claims.user.hasPassword(''condition-3'',
-#    60)) { return true; } /*end password*/ return result; '
-#  id: 09671ca6-04c8-4c1f-95c1-cd47ced128f7
-#  name: condition-3
-#  remedyMethods: []
-#  repeatSchedules:
-#  - 1h
-#  - '13:32'
-#  tags:
-#  - api-created
-#  - automated
-#  - k8s
-#---
-#apiVersion: beta.appgate.com/v1
-#kind: Condition
-#metadata:
-#  name: condition-1
-#spec:
-#  expression: ' var result = false; /*password*/ if (claims.user.hasPassword(''condition-1'',
-#    60)) { return true; } /*end password*/ return result; '
-#  id: d4083d10-74d8-4979-8a0a-e193d52d798c
-#  name: condition-1
-#  remedyMethods: []
-#  repeatSchedules:
-#  - 1h
-#  - '13:32'
-#  tags:
-#  - api-created
-#  - automated
-#  - k8s
+---
+apiVersion: beta.appgate.com/v1
+kind: Condition
+metadata:
+  name: Always
+spec:
+  expression: return true;
+  id: ee7b7e6f-e904-4b4f-a5ec-b3bef040643e
+  name: Always
+  notes: Condition for built-in usage.
+  remedyMethods: []
+  repeatSchedules: []
+  tags:
+  - builtin
+---
+apiVersion: beta.appgate.com/v1
+kind: Condition
+metadata:
+  name: condition-3
+spec:
+  expression: ' var result = false; /*password*/ if (claims.user.hasPassword(''condition-3'',
+    60)) { return true; } /*end password*/ return result; '
+  id: 09671ca6-04c8-4c1f-95c1-cd47ced128f7
+  name: condition-3
+  remedyMethods: []
+  repeatSchedules:
+  - 1h
+  - '13:32'
+  tags:
+  - api-created
+  - automated
+  - k8s
+---
+apiVersion: beta.appgate.com/v1
+kind: Condition
+metadata:
+  name: condition-1
+spec:
+  expression: ' var result = false; /*password*/ if (claims.user.hasPassword(''condition-1'',
+    60)) { return true; } /*end password*/ return result; '
+  id: d4083d10-74d8-4979-8a0a-e193d52d798c
+  name: condition-1
+  remedyMethods: []
+  repeatSchedules:
+  - 1h
+  - '13:32'
+  tags:
+  - api-created
+  - automated
+  - k8s
 
