--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -116,3 +116,34 @@ jobs:
           push: ${{ github.ref == 'refs/heads/main' }}
           tags: |
             ghcr.io/${{ github.repository }}/sdp-operator:${{ matrix.version }}
+
+  crd:
+    needs: build
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        version: ["v12", "v13", "v14", "v15", "v16"]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/download-artifact@v2
+        with:
+          name: openspecs
+          path: /tmp
+      - name: Install unzip
+        run: |
+          sudo apt-get update
+          sudo apt-get install unzip
+      - name: Get OpenAPI specs
+        run: ./bin/unzip-open-spec.sh
+        shell: bash
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.10"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt -r requirements-build.txt
+      - name: Dump CRDs
+        run: |
+          python3 -m appgate --spec-directory api_specs/${{ matrix.version }} dump-crd
