Publish CRDs as library charts

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -120,6 +120,8 @@ jobs:
   crd:
     needs: build
     runs-on: ubuntu-latest
+    env:
+      HELM_EXPERIMENTAL_OCI: 1
     strategy:
       matrix:
         version: ["v12", "v13", "v14", "v15", "v16"]
@@ -147,3 +149,18 @@ jobs:
       - name: Dump CRDs
         run: |
           python3 -m appgate --spec-directory api_specs/${{ matrix.version }} dump-crd
+      - run: mv *-crd.yml k8s/crd/${{ matrix.version }}/templates
+      - run: |
+          echo "chart_version=$(grep version: k8s/chart/Chart.yaml | awk '/version:/{print $NF}')" >> $GITHUB_ENV
+      - uses: azure/setup-helm@v1
+        with:
+          version: 3.7.2
+      - name: Login to GitHub Container Registry
+        run: helm registry login ghcr.io/${{ github.repository }} --username ${{ github.repository_owner }} --password ${{ secrets.GITHUB_TOKEN }}
+      - name: Lint chart
+        run: helm lint k8s/crd/${{ matrix.version }}
+      - name: Package chart
+        run: helm package k8s/crd/${{ matrix.version }} --version ${{ env.chart_version }}
+      - name: Push chart
+        if: ${{ github.ref == 'refs/heads/main' }}
+        run: helm push sdp-operator-crd-${{ matrix.version }}-${{ env.chart_version }}.tgz oci://ghcr.io/appgate/charts
