--- a/tests/resources/crd/v12/condition.yaml
+++ b/tests/resources/crd/v12/condition.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: conditions.beta.appgate.com
+  name: conditions-v12.beta.appgate.com
 spec:
   group: beta.appgate.com
   names:
-    kind: Condition
-    plural: conditions
+    kind: Condition-v12
+    plural: conditions-v12
     shortNames:
-    - con
-    singular: condition
+    - con-v12
+    singular: condition-v12
   scope: Namespaced
   versions:
   - name: v1
