--- a/tests/resources/crd/v12/identityprovider.yaml
+++ b/tests/resources/crd/v12/identityprovider.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: identityproviders.beta.appgate.com
+  name: identityproviders-v12.beta.appgate.com
 spec:
   group: beta.appgate.com
   names:
-    kind: IdentityProvider
-    plural: identityproviders
+    kind: IdentityProvider-v12
+    plural: identityproviders-v12
     shortNames:
-    - ide
-    singular: identityprovider
+    - ide-v12
+    singular: identityprovider-v12
   scope: Namespaced
   versions:
   - name: v1
