--- a/tests/resources/crd/v15/appliance.yaml
+++ b/tests/resources/crd/v15/appliance.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: appliances.beta.appgate.com
+  name: appliances-v15.beta.appgate.com
 spec:
   group: beta.appgate.com
   names:
-    kind: Appliance
-    plural: appliances
+    kind: Appliance-v15
+    plural: appliances-v15
     shortNames:
-    - app
-    singular: appliance
+    - app-v15
+    singular: appliance-v15
   scope: Namespaced
   versions:
   - name: v1
