--- a/tests/resources/crd/v15/condition.yaml
+++ b/tests/resources/crd/v15/condition.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: conditions.beta.appgate.com
+  name: conditions-v15.beta.appgate.com
 spec:
   group: beta.appgate.com
   names:
-    kind: Condition
-    plural: conditions
+    kind: Condition-v15
+    plural: conditions-v15
     shortNames:
-    - con
-    singular: condition
+    - con-v15
+    singular: condition-v15
   scope: Namespaced
   versions:
   - name: v1
