--- a/tests/resources/crd/v16/appliance.yaml
+++ b/tests/resources/crd/v16/appliance.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: appliances.beta.appgate.com
+  name: appliances-v16.beta.appgate.com
 spec:
   group: beta.appgate.com
   names:
-    kind: Appliance
-    plural: appliances
+    kind: Appliance-v16
+    plural: appliances-v16
     shortNames:
-    - app
-    singular: appliance
+    - app-v16
+    singular: appliance-v16
   scope: Namespaced
   versions:
   - name: v1
