--- a/tests/resources/crd/v16/policy.yaml
+++ b/tests/resources/crd/v16/policy.yaml
@@ -1,15 +1,15 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: policies.beta.appgate.com
+  name: policies-v16.beta.appgate.com
 spec:
   group: beta.appgate.com
   names:
-    kind: Policy
-    plural: policies
+    kind: Policy-v16
+    plural: policies-v16
     shortNames:
-    - pol
-    singular: policy
+    - pol-v16
+    singular: policy-v16
   scope: Namespaced
   versions:
   - name: v1
