Add v17 API specs

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -86,7 +86,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: ["v12", "v13", "v14", "v15", "v16"]
+        version: ["v12", "v13", "v14", "v15", "v16", "v17"]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
@@ -124,7 +124,7 @@ jobs:
       HELM_EXPERIMENTAL_OCI: 1
     strategy:
       matrix:
-        version: ["v12", "v13", "v14", "v15", "v16"]
+        version: ["v12", "v13", "v14", "v15", "v16", "v17"]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
