--- a/k8s/crd/Chart.yaml
+++ b/k8s/crd/Chart.yaml
@@ -1,6 +1,8 @@
 apiVersion: v2
-name: sdp-operator-crd-v15
-description: A Helm chart for SDP Operator CRD v15
+# The SDP API version is appended to .name in GitHub Actions
+name: sdp-operator-crd
+# The SDP API version is appended to .description in GitHub Actions
+description: A Helm chart for SDP Operator CRD
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -13,12 +15,14 @@ description: A Helm chart for SDP Operator CRD v15
 type: library
 
 # This is the chart version. This version number should be incremented each time you make changes
-# to the chart and its templates, including the app version.
-# Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.0
+# to the chart and its templates, including the app version. Versions are expected to follow Semantic
+# Versioning (https://semver.org/).
+# .version is overridden to the operator's chart version in GitHub Actions
+version: VERSION
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "v15"
+# .appversion is overridden to the SDP API version in GitHub Actions
+appVersion: APP_VERSION
